<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Changepassword">
    <androidx.appcompat.widget.Toolbar
        android:visibility="visible"
        android:layout_alignParentTop="true"
        style="@style/ToolBarTheme.ToolBarStyle"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue" >
        <TextView
            android:textColor="@color/whitepure"
            android:textAlignment="textStart"
            android:id="@+id/txt_name"
            style="@style/Common_textView_title"
            android:text="@string/changepassword"
            android:fontFamily="@font/poppins_semibold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="0dp"
        android:layout_centerVertical="true"
        android:layout_weight="0.5"

        android:background="@drawable/whitee_bg"
        android:orientation="vertical">

        <TextView
            style="@style/Common_textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginTop="@dimen/margin_20"

            android:layout_marginRight="@dimen/margin_5"

            android:fontFamily="@font/poppins_semibold"
            android:paddingLeft="5dp"

            android:text="@string/changepassword"
            android:textColor="@color/black"
            android:textSize="24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/oldpass_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/OldPassword"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="@dimen/_30dp"

            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:paddingLeft="5dp"




            >

            <EditText
                android:id="@+id/oldpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword"

                android:maxLength="20"
                android:maxLines="1"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size_16"  />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newpass_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:hint="@string/NewPassword"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:paddingLeft="5dp"



            >


            <EditText
                android:id="@+id/newpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword"

                android:maxLength="20"
                android:maxLines="1"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size_16" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmpass_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:hint="@string/ConformPassword"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:paddingLeft="5dp"



            >


            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword"

                android:maxLength="20"
                android:maxLines="1"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size_16" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/margin_50"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:weightSum="1">

            <Button
                android:id="@+id/submitbtn"
                style="@style/Common_Button"
                android:layout_width="match_parent"
           android:paddingBottom="@dimen/margin_5"
                android:paddingTop="@dimen/margin_5"
                android:minHeight="0dp"
                android:layout_height="wrap_content"
                android:text="Submit" />

        </LinearLayout>



    </LinearLayout>

</LinearLayout>