<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@color/backgount_clr"

    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
android:layout_weight="0.5"

        android:orientation="vertical">

         <ImageView
            android:fontFamily="@font/poppins_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logo"
            android:textAlignment="center"

            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="0dp"
        android:layout_centerVertical="true"
        android:layout_weight="0.5"
        android:background="@drawable/whitee_bg"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            style="@style/Common_textView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/signin"
            android:paddingLeft="5dp"
            android:textColor="@color/black"
            android:textSize="24dp" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:layout_marginTop="@dimen/_30dp"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:paddingLeft="5dp">

            <EditText
                android:id="@+id/username_edittxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:maxLength="30"
                android:text=""
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size_16" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:paddingLeft="5dp">

            <EditText
                android:id="@+id/password_edittxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:text=""
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/text_size_16" />

        </com.google.android.material.textfield.TextInputLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/margin_50"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:padding="8dp"
                android:layout_marginLeft="@dimen/margin_5"
                android:layout_marginRight="@dimen/margin_5"
                android:weightSum="1">

                <Button
                    android:id="@+id/loginBtn"
                    style="@style/Common_Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sign In" />

            </LinearLayout>



    </LinearLayout>



</LinearLayout>
